# LCCV

./: CMakeLists.txt
example/: CMakeLists.txt  takevideo.cpp
